# connections-rl

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/accelerate/: fsdp_2xt4.yaml
configs/eval/: default.yaml  qwen7b.yaml
configs/model/: llama3.2-3b.yaml  qwen2.5-1.5b.yaml  qwen2.5-7b.yaml
configs/train/: grpo-7b.yaml  grpo.yaml  sft-7b.yaml  sft.yaml
hub_cards/: connections-rl-grpo-7b.md  connections-rl-grpo.md  connections-rl-sft-7b.md  connections-rl-sft.md
notebooks/: colab_grpo.ipynb  kaggle_2xt4_fsdp.ipynb  kaggle_7b.ipynb  kaggle_analysis.ipynb  kaggle_eval.ipynb  kaggle_eval_7b.ipynb
report/: findings.md  results.md
results/: comparisons.json
results-7b/: comparisons.json
results-7b/base/: metrics.json  records.jsonl
results-7b/grpo/: metrics.json  records.jsonl
results-7b/sft/: metrics.json  records.jsonl
results/base/: metrics.json  records.jsonl
results/grpo/: metrics.json  records.jsonl
results/sft/: metrics.json  records.jsonl
results/smoke/oracle/: metrics.json  records.jsonl
results/smoke/random/: metrics.json  records.jsonl
scripts/: push_model_cards.py
src/connections_rl/: __init__.py
src/connections_rl/data/: __init__.py  build.py  formatting.py  loader.py  splits.py
src/connections_rl/eval/: __init__.py  checkpoint_curve.py  gate.py  harness.py  passk.py  run.py  solvers.py  stats.py
tests/: conftest.py  test_api.py  test_data.py  test_eval.py  test_grpo_adapter.py  test_reward.py
tests/fixtures/: puzzles_sample.json
(+9 files in other folders)
