[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "connections-rl"
version = "0.1.0.dev0"
description = "GRPO post-training of small open models on NYT Connections, with a production eval + serving stack. Follow-up to gvc-local."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jackson Lukas" }]
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8",
    "mypy>=1.8",
    "types-PyYAML",
    "httpx>=0.27",
    "fastapi>=0.111",
    "pydantic>=2",
]
serve = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2",
    "openai>=1.30",
    "httpx>=0.27",
]
train = [
    "torch>=2.2",
    "transformers>=4.44",
    "trl>=0.12",
    "peft>=0.11",
    "datasets>=2.19",
    "accelerate>=0.30",
    "bitsandbytes>=0.43; platform_system != 'Darwin'",
    "wandb",
]
plots = ["matplotlib>=3.8"]
# Baseline reuse: multi-agent solvers + tagged puzzle DB from the predecessor repo.
gvc = ["gvc-local @ git+https://github.com/jacksonmlukas/gvc-local"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
